Chronological listing of changes. If a particular SVN revision has no entry, that
check-in did not involve any code or feature changes.

2009-04-17 (r42)

* Mock observers now handle user infos on notifications.


2009-04-09 (r39)

* Added inital support for mock observers (loosely based on Dave Dribbin's idea)


2009-04-08 (r38)

* Moved factory methods from OCMConstraint to OCMArg


2009-03-13 (r37)

* Added pass by ref argument setters


2009-03-11 (r34)

* Linked install name now uses @rpath (Dave Dribbin)


2009-02-22 (r32)

* Added support for respondsToSelector (Dave Dribin)
* Added constraint for any pointer 
* Now comparing selectors as strings (Dado Colussi)


2008-07-07 (r28)

* Resetting invocation target in recorder to avoid retain cycles.


2008-06-19 (r27)

* Added optional integration with hamcrest for constraints


2008-05-08 (r24)

* Now building quad-fat; the 64-bit versions are somewhat experimental though


2008-02-28 (r22)

* Using new functions to deal with protocols (Evan Doll)


2007-11-22 (r20)

* Added support for void* parameters (Tuukka Norri)
* Fixed a bug that could caused crashes when non-char const pointers were described
 

2007-11-22 (r19)

* Fixed bug to allow mocking of methods with type qualifieres (Nikita Zhuk)


2007-10-22 (r18)

* Added a simple constraint implementation.


2007-06-04 (r15)

* Now re-throwing fail-fast exceptions, for unexpected invocations for example, when
  verify is called; in case the first throw is ignored by a framework.


2007-04-23 (r14)

* Added nice mocks, i.e. mocks that don't raise on unknown methods (Mark Thomas)

* Fixed bug that prevented expectations after invocations (M. Scott Ford)


2006-06-11 (r12)

* Added possibility to throw an exception, based on code by Justin DeWind

* Added Evan Doll's bugfix, which forwards conformsToProtocol: methods when necessary

* Added the ability to match struct arguments, based on code contributed by Daniel Eggert
