@@ -1,6 +1,11 @@
 Chronological listing of changes. If a particular SVN revision has no entry, that
 check-in did not involve any code or feature changes.
 
+2009-04-24 (r43)
+
+* Added partial mocks (calls to the original object reference cannot be mocked)
+
+
 2009-04-17 (r42)
 
 * Mock observers now handle user infos on notifications.
